# file-self-destructor-api

./: .dockerignore  .gitignore  DEPLOYMENT_OPTIONS.md  Dockerfile  PRODUCTION_IMPROVEMENTS.md  README.md  download.html  go.mod  go.sum  index.html  main.go  script.js  styles.css
.specstory/history/: 2026-01-08_08-52Z-file-self-destructor-api-project-status.md
blockchain/: main.go
blockchain-serv/: Cargo.toml
blockchain/config/: config.go
blockchain/handlers/: handlers.go
blockchain/models/: models.go
blockchain/services/: blockchain.go
handlers/: download.go  meta.go  preview.go  upload.go
storage/: redis.go  types.go
utils/: errors.go  helper.go  password.go  validation.go
