[package]
name = "fileorcha-blockchain"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Framework
actix-web = "4.5"
actix-cors = "0.7"
tokio = { version = "1", features = ["full"] }

# HTTP Client
reqwest = { version = "0.11", features = ["json"] }

# Blockchain
ethers = "1.0"
web3 = "0.19"
solana-client = { version = "1.17", optional = true }

# IPFS
ipfs-api-backend-actix = "0.6"

# Crypto & Hashing
sha2 = "0.10"
hex = "0.4"
secp256k1 = "0.27"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database/Cache
redis = { version = "0.24", features = ["tokio-comp"] }
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio"] }

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Config
dotenv = "0.15"
config = "0.14"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-actix-web = "0.7"

# Time
chrono = { version = "0.4", features = ["serde"] }

[features]
default = []
solana = ["dep:solana-client"]

